feat: init checkList swagger openApi docs and init tokenMiddleware
