# openapi.json
@@ -92,12 +92,73 @@
           "email",
           "password"
         ]
+      },
+      "CheckList": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64",
+            "example": 1
+          },
+          "title": {
+            "type": "string",
+            "example": "Shopping List"
+          },
+          "public": {
+            "type": "boolean",
+            "example": true
+          },
+          "userId": {
+            "type": "integer",
+            "format": "int64",
+            "example": 1
+          },
+          "itemsList": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "integer",
+                  "format": "int64",
+                  "example": 1
+                },
+                "name": {
+                  "type": "string",
+                  "example": "Milk"
+                },
+                "description": {
+                  "type": "string",
+                  "example": "market near home"
+                },
+                "completed": {
+                  "type": "boolean",
+                  "example": false
+                }
+              },
+              "required": [
+                "name",
+                "description",
+                "completed"
+              ]
+            }
+          }
+        },
+        "required": [
+          "title",
+          "public",
+          "userId"
+        ]
       }
     }
   },
   "paths": {
     "/api/users": {
       "post": {
+        "tags": [
+          "Users"
+        ],
         "summary": "Creates a new user.",
         "requestBody": {
           "content": {
@@ -129,6 +190,9 @@
         }
       },
       "get": {
+        "tags": [
+          "Users"
+        ],
         "summary": "Returns a list of users.",
         "responses": {
           "200": {
@@ -152,6 +216,9 @@
     },
     "/api/users/{id}": {
       "get": {
+        "tags": [
+          "Users"
+        ],
         "summary": "Returns a user by ID.",
         "parameters": [
           {
@@ -188,6 +255,9 @@
         }
       },
       "put": {
+        "tags": [
+          "Users"
+        ],
         "summary": "Updates a user by ID.",
         "parameters": [
           {
@@ -234,6 +304,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "Users"
+        ],
         "summary": "Deletes a user by ID.",
         "parameters": [
           {
@@ -256,6 +329,66 @@
           },
           "400": {
             "$ref": "#/components/responses/InvalidIdParameter"
+          },
+          "500": {
+            "$ref": "#/components/responses/InternalServerError"
+          }
+        }
+      }
+    },
+    "/api/checkList": {
+      "post": {
+        "tags": [
+          "CheckList"
+        ],
+        "summary": "Creates a new checkList.",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CheckList"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "201": {
+            "description": "CheckList created successfully.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CheckList"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid request body."
+          },
+          "500": {
+            "$ref": "#/components/responses/InternalServerError"
+          }
+        }
+      },
+      "get": {
+        "tags": [
+          "CheckList"
+        ],
+        "summary": "Returns a list of checkLists.",
+        "responses": {
+          "200": {
+            "description": "A JSON array of objects representing checkLists.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/CheckList"
+                  }
+                }
+              }
+            }
           },
           "500": {
             "$ref": "#/components/responses/InternalServerError"
