# src/database/models/CheckList.js
@@ -33,12 +33,6 @@ const checkListModel = (sequelize, DataTypes) => {
       foreignKey: "userId",
       as: "user",
     });
-
-    CheckList.hasMany(models.Item, {
-      through: "itemsCheckLists",
-      foreignKey: "checkListId",
-      as: "items",
-    });
   };
 
   return CheckList;
